--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <HTML>
 <head>
     <script src="libs/backbone.js">
+    <script src="libs/jquery-2.1.0.min.js">
     <script src="stockpot.js">
 </head>
 
