--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,12 @@
 <HTML>
 <head>
-    <script src="libs/backbone.js"></script>
     <script src="libs/jquery-2.1.0.min.js"></script>
+    <script src="libs/underscore-min.js"></script>
+    <script src="libs/backbone.js"></script>
     <script src="stockpot.js"></script>
 </head>
-
 <body>
-	<div id="stock-pick">
+	<div id="stockpot">
 	</div>
 </body>
 
