--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,20 @@
     <script src="libs/backbone.js"></script>
     <script src="libs/jquery-2.1.0.min.js"></script>
     <script src="stockpot.js"></script>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+	<nav class="navbar navbar-default" role="navigation">
+  		<div class="container-fluid">
+
 	<div id="stock-pick">
 	</div>
 </body>
