making our site beautiful

--- a/static/soup.html
+++ b/static/soup.html
@@ -10,6 +10,7 @@
 	width: 250px;
 	margin-left: 40%;
 	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .service-image{
@@ -28,6 +29,16 @@
 					<img class="image-responsive service-image" alt="200x200" src="http://g.fool.com/art/newsletters/1069/site/logo.png"/>
 				</div>
 			
+			<div class="panel panel-success">
+			    <div class="panel-heading">
+			        <span class="glyphicon glyphicon-USD" style="display:inline;"></span>
+			        <span class="glyphicon glyphicon-USD"></span>
+			        <h3 class="panel-title">Stocks you own that match Rule Beakers</h3>
+			    </div>
+			    <div class="panel-body">
+			        Panel content
+			    </div>
+		    </div>
 
             <div class="table-responsive">
 	            <table class="table table-striped">
@@ -63,17 +74,6 @@
 	              	</tbody>
             	</table>
           	</div>
-
-          	<div class="col-xs-6 col-sm-3 placeholder">
-              <img src="http://g.fool.com/art/Newsletters/1069/img/davidg.jpg" class="img-responsive advisor-image" alt="200x200">
-              <h4>David Gardner</h4>
-              <span class="text-muted">David's Top Picks</span>
-            </div>
-            <div class="col-xs-6 col-sm-3 placeholder">
-              <img src="http://g.fool.com/art/Newsletters/1069/img/karlt.jpg" class="img-responsive advisor-image" alt="200x200">
-              <h4>Karl Thiel</h4>
-              <span class="text-muted">Karl's Top Picks</span>
-            </div>
 
 		</div>
 	</body>
