--- a/static/soup.html
+++ b/static/soup.html
@@ -19,6 +19,10 @@
 	margin-top: 38%;
 	width: 100%;
 }
+
+.stocks-you-own {
+	display: inline-block;
+}
 </style>
 
 <html>
@@ -31,9 +35,11 @@
 			
 			<div class="panel panel-success">
 			    <div class="panel-heading">
-			        <span class="glyphicon glyphicon-USD" style="display:inline;"></span>
 			        <span class="glyphicon glyphicon-USD"></span>
-			        <h3 class="panel-title">Stocks you own that match Rule Beakers</h3>
+			        <span class="glyphicon glyphicon-USD"></span>
+			        <h3 class="panel-title stocks-you-own">
+			        	Stocks you own that match Rule Beakers
+			        </h3>
 			    </div>
 			    <div class="panel-body">
 			        Panel content
